Make sure the container covers all children to get consistent bottom margin

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -57,6 +57,7 @@ html, body {
   background: white;
   margin: 0 auto;
   padding: 1em;
+  overflow: hidden; /* make sure floated children contribute to size of container */
 }
 
 nav {
